# main

./: .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .php-cs-fixer.cache  .phpcs.xml  .phpstan-memory-limit  .stylelintrc.json  Makefile  README.md  composer.json  env.example  footer.php  functions.php  header.php  index.php  next.config.js  package-lock.json  package.json  phpstan.neon  report.20191114.153256.29672.001.json  server.js  single.php  style.css  webpack.config.js
.github/: FUNDING.yml
assets/: README.md
assets/branding/: iesd-brand-guideline.ai
assets/js/: main.js
assets/json/: acf-export-configuration.json  acf-export-site-settings.json
assets/logo/: iesd-logo-black.ai  iesd-logo-white.ai
assets/scss/: style.scss
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql
backend/src/: config.rs  main.rs
backend/src/handlers/: auth.rs  health.rs  mod.rs  users.rs
backend/src/models/: auth.rs  mod.rs  user.rs
backend/src/services/: database.rs  mod.rs  supabase.rs
backend/src/utils/: mod.rs  response.rs
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  init.sql
docs/: CONTRIBUTING.md  DESIGN.md  FRONTEND.md  SETUP.md  STYLE-GUIDE.md
frontend/: .eslintrc.js  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx  vite-env.d.ts
inc/: template-functions.php
languages/: iesd-main.pot
lib/: init-apollo.js  with-apollo-client.js
pages/: _app.js  _document.js  development.js  error.js  home.js  index.js  mentorship.js  page.js  post.js  volunteer.js
pages/api/: events.js
pages/forms/: mentor.js  mentorship.js  speak.js  volunteer.js
sass/: _shame.scss  index.scss
sass/base/: _animation.scss  _colors.scss  _global.scss  (+2 more)
template-parts/: community.php  join.php  slogan.php  speakers.php  sponsors.php  stories.php
tests/: README.md  sample.test.js  utils.test.js
(+232 files in other folders)
